# spoon

./: README.md  pyproject.toml
src/spoon/: __main__.py
