[project]
name = "spoon"
version = "0.1.3"
description = "A poetic notifier that delivers a spoonful of thought"
readme = "README.md"
authors = [
    { name = "shreya-0718", email = "shreyachougule796@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "schedule>=1.2.2",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
spoon = "spoon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

